@@ -52,6 +52,7 @@ prompts = [r'[sam123@home ~]$',
            r'sam@MyHost-X123#',
            r'MyHost-ABC-CDE123>',
            r'MyHost-A1#',
+           r'S-OAS#',
            r'0123456-1-1-abc#',
            r'0123456-1-1-a>',
            r'MyHost-A1(config)#',
